[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/BaseShootingEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/robot/Robot.gd" type="Script" id=2]
[ext_resource path="res://characters/parts/projectiles/Laser.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/characters/robot/robot.png" type="Texture" id=4]
[ext_resource path="res://assets/images/characters/robot/roboteye.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 8.0
height = 2.0

[node name="Robot" index="0" instance=ExtResource( 1 )]
position = Vector2( 27.4824, 15.9483 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )
current_health = 4
max_health = 4
speed = 40
detect_radius = 80
has_detect_radius = true
bullet = ExtResource( 3 )
projectile_cooldown = 2.0
eye_rotation_speed = 6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 4 )
hframes = 3
frame = 2
region_rect = Rect2( 0, 0, 17, 26 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Eye" type="Sprite" parent="." index="4"]
texture = ExtResource( 5 )

[node name="EyeContainer" type="Node2D" parent="." index="5"]
position = Vector2( 0, -2 )

[node name="Position2D" type="Position2D" parent="EyeContainer" index="0"]
position = Vector2( 2, 0 )

[node name="DetectRadius" parent="." index="6"]
collision_mask = 67

[node name="DirectionChangeTimer" type="Timer" parent="." index="7"]
[connection signal="timeout" from="DirectionChangeTimer" to="." method="_on_DirectionChangeTimer_timeout"]
